--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "eok-learning": {
+    "sassychef": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/eok-learning",
+            "outputPath": "dist/sassychef",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap-theme.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -63,18 +64,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "eok-learning:build"
+            "browserTarget": "sassychef:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "eok-learning:build:production"
+              "browserTarget": "sassychef:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "eok-learning:build"
+            "browserTarget": "sassychef:build"
           }
         },
         "test": {
@@ -89,9 +90,12 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           }
         },
         "lint": {
@@ -111,15 +115,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "eok-learning:serve"
+            "devServerTarget": "sassychef:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "eok-learning:serve:production"
+              "devServerTarget": "sassychef:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "eok-learning"
+  "defaultProject": "sassychef"
 }
